--- a/example/index.html
+++ b/example/index.html
@@ -53,8 +53,8 @@
 			</a>
 		</li>
 	</ul>
-	<script src="Jesm4.min.js"></script>
-	<script src="JesmDrag.js"></script>
+	<script src="js/Jesm/Jesm4.min.js"></script>
+	<script src="js/JesmDrag/JesmDrag.js"></script>
 	<script src="../JesmGaleria.js"></script>
 	<script>
 		Jesm.Core.Galeria.cfg.autoAndar=false;
